--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.4",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.474.0",
     "radash": "^12.1.0",
